[package]
name = "subscription"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
boot = ["export","dep:boot-core","dep:abstract-boot"]

[dependencies]
cosmwasm-std = { workspace = true }
cw-controllers = {workspace = true}
cw-storage-plus = {workspace = true}
cosmwasm-schema = { workspace = true }
cw2 = {workspace = true}
cw20 = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}
thiserror = {workspace = true}
cw-asset= {workspace = true}
semver = {workspace = true}

abstract-sdk = {workspace = true}
abstract-app = {workspace = true}
abstract-core = {workspace = true}
boot-core = { workspace = true , optional = true }

abstract-boot = { workspace = true , optional = true }

[dev-dependencies]
cw20 = {workspace = true}
