[package]
name = "abstract-tendermint-staking-adapter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
boot = ["dep:abstract-boot", "dep:boot-core", "export"]


# Keep as is until TendermintStake updates.
[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
abstract-core = { workspace = true }
abstract-sdk = { workspace = true }
abstract-adapter = { workspace = true }

boot-core = { workspace = true, optional = true }
abstract-boot = { workspace = true, optional = true }

[dev-dependencies]
abstract-adapter = { workspace = true, features = ["schema"] }
