[package]
name = "abstract-tendermint-staking-adapter"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

exclude = ["contract.wasm", "hash.txt"]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []
cw-orch = ["dep:abstract-interface", "dep:cw-orch", "export"]


# Keep as is until TendermintStake updates.
[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
thiserror = { workspace = true }
abstract-core = { workspace = true }
abstract-sdk = { workspace = true }
abstract-adapter = { workspace = true }

cw-orch = { workspace = true, optional = true }
abstract-interface = { workspace = true, optional = true }

[dev-dependencies]
abstract-adapter = { workspace = true, features = ["schema"] }
