[package]
name = "integration_testing"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}

exclude = [
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]

[dev-dependencies]
cw-controllers = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}
cw-storage-plus = {workspace = true}
cosmwasm-schema = { workspace = true }
cw2 = {workspace = true}
cw20 = {workspace = true}
cw20-base = {workspace = true}
cw-asset= {workspace = true}
cosmwasm-std = { workspace = true }
abstract-os = {workspace = true}
abstract-sdk = {workspace = true}
cw-multi-test = {workspace = true}
anyhow = "1.0.57"
proxy = { path = "../core/proxy" }
manager = { path = "../core/manager" }
ans_host = {path = "../native/ans-host" }
os-factory = { path = "../native/factory" }
module-factory = { path = "../native/module_factory" }
version-control = { path = "../native/version_control" }
subscription = { path = "../modules/apps/subscription" }
dex = { path = "../modules/apis/dex" }
