[package]
name = "integration_testing"
version = {workspace = true}
authors = {workspace = true}
edition = {workspace = true}

exclude = [
  "contract.wasm",
  "hash.txt",
]


[lib]
crate-type = ["cdylib", "rlib"]

[features]


[dependencies]

[dev-dependencies]
cw-controllers = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}
cw-storage-plus = {workspace = true}
cosmwasm-schema = { workspace = true }
cw2 = {workspace = true}
cw20 = {workspace = true}
cw20-base = {workspace = true}
cw-asset= {workspace = true}
cosmwasm-std = { workspace = true }
abstract-os = {workspace = true}
abstract-sdk = {workspace = true}
cw-multi-test = {workspace = true}
anyhow = {workspace = true}
proxy = { path = "../core/proxy" }
manager = { path = "../core/manager" }
ans-host = {path = "../native/ans-host" }
os-factory = { path = "../native/os-factory" }
module-factory = { path = "../native/module-factory" }
version-control = { path = "../native/version-control" }
subscription = { path = "../modules/apps/subscription" }
dex = { path = "../modules/apis/dex" }
