[package]
name = "token"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Expanded implementation of a CosmWasm-20 compliant token for post intialization"
license = "MIT"
repository = "https://github.com/CosmWasm/cosmwasm-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]

# use library feature to disable all init/handle/query exports
default = ["export"]
export = []

[dependencies]
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cosmwasm-std = { workspace = true, features = ["iterator"] }
schemars = { workspace = true }
serde = { workspace = true }
cosmwasm-schema = { workspace = true }

abstract-core = { workspace = true }
abstract-sdk = { workspace = true }

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
