[package]
name = "abstract-interface-scripts"
version = { workspace = true }
edition = { workspace = true }

[lib]
name = "script_helpers"
path = "src/lib.rs"

[dependencies]
cosmwasm-std = { workspace = true }
serde = { workspace = true }
semver = { workspace = true, default-features = false }
cw-controllers = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }
cw-orch = { workspace = true, features = ["daemon"] }
abstract-core = { workspace = true, features = ["interface"] }

serde_json = "1.0"
abstract-interface = { workspace = true, features = [
  "daemon",
], default-features = false }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"
url = "2.4.1"

serde-cw-value = "0.7.0"
sha256 = "1"
clap = { workspace = true }
dirs = "5.0.1"

[patch.crates-io]
cw-orch-networks = { git = "https://github.com/AbstractSDK/cw-orchestrator", branch = "add/chaininfo_eq_derive" }
