[package]
name = "scripts"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
abstract-client = { path = "../packages/abstract-client" }
abstract-std.workspace = true
abstract-account = { path = "../contracts/account", features = ["xion"] }
anyhow.workspace = true
cosmwasm-std.workspace = true
cw-orch = { workspace = true, features = ["daemon"] }
dotenv = "0.15.0"
env_logger = "0.11.5"
# xion_sdk_proto = { version = "0.24.0-pre", package = "cosmos-sdk-proto", git = "https://github.com/burnt-labs/cosmos-rust", branch = "feat/xion-serde", features = [
#     "xion",
# ] }

# Remove once fixed upstream
xion_sdk_proto = { version = "0.24.0-pre", package = "cosmos-sdk-proto", git = "https://github.com/CyberHoward/cosmos-rust.git", branch = "patch-1", features = [
    "cosmwasm",
] }
xionrs = { version = "0.19.0-pre", package = "cosmrs", git = "https://github.com/CyberHoward/cosmos-rust.git", branch = "patch-1" }

cw-orch-daemon = "0.25.1"
bitcoin = { version = "0.32.2" }
tokio = { workspace = true, features = ["full"] }
tonic = { version = "0.12.2", features = ["tls"] }
cosmrs = { version = "0.19.0", features = ["dev", "cosmwasm", "grpc"] }
prost = { version = "0.13" }

cw-orch-core = "2.0.0"
