[package]
name = "abstract-interface-integration-tests"
version = { workspace = true }
edition = { workspace = true }


[lib]


[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
serde = { workspace = true }
semver = { workspace = true }
cw-controllers = { workspace = true }
thiserror = { workspace = true }
cw-asset = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw20-base = { workspace = true }

cw-orch = { package="cw-orch-interchain", git = "ssh://git@github.com/AbstractSDK/cw-orch-interchain.git" }
cw-orch-proto = { git = "ssh://git@github.com/AbstractSDK/cw-orch-interchain.git" }
abstract-core = { workspace = true, features = ["interface"] }

abstract-interface = { workspace = true, features = ["daemon"] }
ibc-client = { workspace = true }
tokio = { workspace = true }
log = "0.4.14"
anyhow = { workspace = true }
serde_json = "1.0.79"
reqwest = { version = "0.11.9" }
dotenv = "0.15.0"
env_logger = "0.10.0"

cosmos-sdk-proto = { version = "0.19.0", features = [
  "grpc-transport",
  "cosmwasm",
] }
serde-cw-value = "0.7.0"
sha256 = "1.1.1"
clap.workspace = true
async-recursion = "1.0.4"
base64 = "0.21.0"
tonic = "0.9.2"
futures = "0.3.28"

ibc-chain-registry = "0.24.1"
ibc-relayer-types = "0.24.1"

abstract-etf = { git = "https://github.com/AbstractSDK/apps/" }
osmosis-std = "0.16.1"
cosmrs = "0.14.0"
prost = "0.11.9"
cw-orch-polytone = { git = "https://github.com/AbstractSDK/polytone", version = "1.0.0" }
abstract-interface-scripts = {path="../scripts"}