[package]
name = "abstract-tests"
version.workspace = true
authors.workspace = true
edition.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
description = "Testing library for the Abstract SDK. This is used primarily for tests but some elements are re-usable for testing apps and adapters"


[lib]

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
cw-utils = { workspace = true }

cw-orch = { workspace = true, features = ["daemon"] }
cw-orch-clone-testing = { workspace = true }
cw-orch-interchain = { workspace = true, features = ["daemon"] }
cw-orch-proto = { workspace = true }

abstract-std = { workspace = true }
abstract-app = { workspace = true, features = ["test-utils"] }
abstract-unit-test-utils = { workspace = true }
abstract-client = { workspace = true }
abstract-interface = { workspace = true, features = ["daemon", "interchain"] }
abstract-integration-test-utils = { workspace = true }
abstract-sdk = { workspace = true }
abstract-adapter = { workspace = true, features = ["test-utils"] }

tokio = { workspace = true }
anyhow = { workspace = true }
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.14"
dotenv = "0.15.0"

cw2 = { workspace = true }
semver = { workspace = true }


ibc-relayer-types = "0.29"

cw-orch-polytone = { workspace = true }
polytone = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus.workspace = true
thiserror.workspace = true
base64 = "0.22.1"
# Testing contract
counter-contract = { version = "0.27.0" }

[lints]
workspace = true
