[package]
name = "abstract-astroport-adapter"
version = "2.10.0"
authors = ["Abstract Money <contact@abstract.money>"]
edition = "2021"
description = "Abstract DexCommand implementation for Astroport"
license = "Apache-2.0"
repository = "https://github.com/astroport-fi/astroport"

[features]
default = ["full_integration"]
local = []
full_integration = [
  "dep:cw20",
  "dep:cosmwasm-schema",
  "dep:cw-asset",
  "dep:cw-utils",
  "dep:astroport",
  "abstract-staking-standard/module-ibc",
  "abstract-dex-standard/module-ibc",
  "abstract-sdk/module-ibc",
]

[dependencies]
astroport = { version = "3.11.1", optional = true }
lazy_static = "1.4.0"

cosmwasm-std = { workspace = true }
abstract-staking-standard = { workspace = true }
abstract-dex-standard = { workspace = true }
abstract-sdk = { workspace = true }
cw20 = { workspace = true, optional = true }
cosmwasm-schema = { workspace = true, optional = true }
cw-asset = { workspace = true, optional = true }
cw-utils = { workspace = true, optional = true }

[dev-dependencies]
abstract-dex-standard = { workspace = true, features = ["testing"] }
cw-orch = { workspace = true }
