[package]
name = "abstract-cavern-adapter"
version = "0.3.0"
authors = ["Abstract Money <contact@abstract.money>"]
edition = "2021"
description = "Abstract Staking implementation for Kujira"
license = "MIT OR Apache-2.0"

[features]
default = ["full_integration"]
local = []
full_integration = [
  "dep:moneymarket",
  "dep:basset",
  "dep:cavern-lsd-wrapper-token",
  "dep:wrapper-implementations",
  "dep:cw20",
  "dep:cw-asset",
  "dep:cw-utils",
  "dep:cw-storage-plus",
]

[dependencies]
cw20-base = { version = "1.1.2", features = ["library"] }

cosmwasm-std = { workspace = true, features = ["stargate"] }
abstract-staking-standard = { workspace = true }
abstract-dex-standard = { workspace = true }
abstract-money-market-standard = { workspace = true }
abstract-sdk = { workspace = true }
cw20 = { workspace = true, optional = true }
cosmwasm-schema = { workspace = true, optional = true }
cw-asset = { workspace = true, optional = true }
cw-utils = { workspace = true, optional = true }
cw-storage-plus = { workspace = true, optional = true }

moneymarket = { git = "https://github.com/CavernPerson/money-market-contracts", version = "0.3.1", optional = true, rev = "ea773bb" }
basset = { git = "https://github.com/CavernPerson/cavern-lsd-wrapper", optional = true, rev = "3643800" }
cavern-lsd-wrapper-token = { git = "https://github.com/CavernPerson/cavern-lsd-wrapper", optional = true, features = [
  "library",
], rev = "3643800" }
wrapper-implementations = { git = "https://github.com/CavernPerson/cavern-lsd-wrapper", optional = true, features = [
  "library",
], rev = "3643800" }


[dev-dependencies]
abstract-dex-standard = { workspace = true, features = ["testing"] }
cw-orch = { workspace = true, features = ["daemon"] }
cosmwasm-schema.workspace = true
