[package]
name = "abstract-dao-proxy"
version = "0.0.1"
authors = ["Abstract","DAO-DAO"]
edition = "2021"
description = "Abstract Dao Proxy Contract"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/AbstractSDK/abstract"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["export"]
export = []

[dependencies]
cosmwasm-std = { version = "1.1.2", features = ["stargate"] }
# abstract-sdk = { version = "0.17.0" }
# abstract-core = { version = "0.17.0" }
abstract-proxy ={ version = "0.17.0", path = "../../framework/contracts/account/proxy" }
cw-asset = { version = "3.0.0", optional = true }
cw2 = "1.1.0"
abstract-sdk = { path = "../../framework/packages/abstract-sdk" }
abstract-macros = {path = "../../framework/packages/abstract-macros" }
abstract-core = { path = "../../framework/packages/abstract-core" }
semver = "1.0.17"
thiserror = "1.0.43"
dao-dao-core = "2.2.0"
cosmwasm-schema = "1.2.7"

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
