[package]
name = "abstract-kujira-adapter"
version = "0.2.0"
authors = ["Abstract Money <contact@abstract.money>"]
edition = "2021"
description = "Abstract Staking implementation for Kujira"
license = "MIT OR Apache-2.0"

[features]
default = ["full_integration"]
local = []
full_integration = ["dep:kujira", "dep:cw20", "dep:cw-asset", "dep:cw-utils"]

[dependencies]
cosmwasm-std = { version = "1.1.2", features = ["stargate"] }
abstract-core = { version = "0.19.2" }
abstract-staking-standard = { version = "0.19.2" }
abstract-dex-standard = { version = "0.19.2" }
kujira = { version = "0.8.2", optional = true }

#Abstract dependencies 
cw20 = { version = "0.15", optional = true }
abstract-sdk = { version = "0.19.2" }
cw-asset = { version = "3.0.0", optional = true }
cw-utils = { version = "1.0.1", optional = true }

[dev-dependencies]
abstract-dex-standard = { version = "0.19.2", features = ["testing"] }
cw-orch = { version = "0.16.4", features = ["daemon"] }
cosmwasm-schema = "1.3.1"
