[package]
name = "abstract-kujira-adapter"
version = "0.3.0"
authors = ["Abstract Money <contact@abstract.money>"]
edition = "2021"
description = "Abstract Adapters implementation for Kujira"
license = "MIT OR Apache-2.0"

[features]
default = ["full_integration"]
local = []
full_integration = ["dep:kujira", "dep:cw20", "dep:cw-asset", "dep:cw-utils"]

[dependencies]
kujira = { version = "0.8.2", optional = true }

cosmwasm-std = { workspace = true, features = ["stargate"] }
abstract-staking-standard = { workspace = true }
abstract-dex-standard = { workspace = true }
abstract-money-market-standard = { workspace = true }
abstract-sdk = { workspace = true }
cw20 = { workspace = true, optional = true }
cosmwasm-schema = { workspace = true, optional = true }
cw-asset = { workspace = true, optional = true }
cw-utils = { workspace = true, optional = true }
prost = "0.12.3"

[dev-dependencies]
abstract-dex-standard = { workspace = true, features = ["testing"] }
cw-orch = { workspace = true, features = ["daemon"] }
cosmwasm-schema.workspace = true
