[package]
authors     = ["Abstract Money <contact@abstract.money>"]
description = "Abstract Adapters implementation for Kujira"
edition     = "2021"
license     = "MIT OR Apache-2.0"
name        = "abstract-kujira-adapter"
version     = "0.3.0"

[features]
default          = ["full_integration"]
full_integration = ["dep:kujira", "dep:cw20", "dep:cw-asset", "dep:cw-utils"]
local            = []

[dependencies]
kujira = { version = "0.8.2", optional = true }

abstract-dex-standard          = { workspace = true }
abstract-money-market-standard = { workspace = true }
abstract-sdk                   = { workspace = true }
abstract-staking-standard      = { workspace = true }
cosmwasm-schema                = { workspace = true, optional = true }
cosmwasm-std                   = { workspace = true, features = ["stargate"] }
cw-asset                       = { workspace = true, optional = true }
cw-utils                       = { workspace = true, optional = true }
cw20                           = { workspace = true, optional = true }
prost                          = "0.12.3"

[dev-dependencies]
abstract-dex-standard     = { workspace = true, features = ["testing"] }
cosmwasm-schema.workspace = true
cw-orch                   = { workspace = true, features = ["daemon"] }
