[package]
name = "abstract-mars-adapter"
version = "0.3.0"
authors = ["Abstract Money <contact@abstract.money>"]
edition = "2021"
description = "Abstract Staking implementation for Kujira"
license = "MIT OR Apache-2.0"

[features]
default = ["full_integration"]
local = []
full_integration = [
  "dep:mars-red-bank-types",
  "dep:cw20",
  "dep:cw-asset",
  "dep:cw-utils",
  "dep:cosmwasm-schema",
  "abstract-staking-standard/module-ibc",
  "abstract-dex-standard/module-ibc",
  "abstract-sdk/module-ibc",
  "abstract-money-market-standard/module-ibc",
]

[dependencies]

cosmwasm-std = { workspace = true, features = ["stargate"] }
abstract-staking-standard = { workspace = true }
abstract-dex-standard = { workspace = true }
abstract-money-market-standard = { workspace = true }
abstract-sdk = { workspace = true }
cw20 = { workspace = true, optional = true }
cosmwasm-schema = { workspace = true, optional = true }
cw-asset = { workspace = true, optional = true }
cw-utils = { workspace = true, optional = true }
mars-red-bank-types = { version = "1.0.0", optional = true }

[dev-dependencies]
abstract-dex-standard = { workspace = true, features = ["testing"] }
cw-orch = { workspace = true, features = ["daemon"] }
cosmwasm-schema.workspace = true
